@@ -3,10 +3,6 @@
 
 package com.microsoft.typespec.http.client.generator.core.util;
 
-import com.azure.core.util.Base64Url;
-import com.azure.core.util.CoreUtils;
-import com.azure.core.util.DateTimeRfc1123;
-import com.azure.core.util.serializer.CollectionFormat;
 import com.microsoft.typespec.http.client.generator.core.Javagen;
 import com.microsoft.typespec.http.client.generator.core.extension.model.codemodel.RequestParameterLocation;
 import com.microsoft.typespec.http.client.generator.core.extension.plugin.PluginLogger;
@@ -14,10 +10,9 @@ import com.microsoft.typespec.http.client.generator.core.model.clientmodel.Class
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.ClientModel;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.ClientModelProperty;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.IType;
-import com.microsoft.typespec.http.client.generator.core.model.clientmodel.ListType;
+import com.microsoft.typespec.http.client.generator.core.model.clientmodel.IterableType;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.MapType;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.ModelProperty;
-import com.microsoft.typespec.http.client.generator.core.model.clientmodel.PrimitiveType;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.ProxyMethodExample;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.examplemodel.BinaryDataNode;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.examplemodel.ClientModelNode;
@@ -27,8 +22,7 @@ import com.microsoft.typespec.http.client.generator.core.model.clientmodel.examp
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.examplemodel.MapNode;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.examplemodel.MethodParameter;
 import com.microsoft.typespec.http.client.generator.core.model.clientmodel.examplemodel.ObjectNode;
-import java.time.Instant;
-import java.time.OffsetDateTime;
+import io.clientcore.core.utils.CoreUtils;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.LinkedHashMap;
@@ -65,24 +59,39 @@ public class ModelExampleUtil {
     @SuppressWarnings("unchecked")
     public static ExampleNode parseNode(IType type, IType wireType, Object objectValue) {
         ExampleNode node;
-        if (type instanceof ListType) {
-            IType elementType = ((ListType) type).getElementType();
-            if (objectValue instanceof List) {
-                ListNode listNode = new ListNode(elementType, objectValue);
-                node = listNode;
+        if (type instanceof IterableType) {
+            IType elementType = ((IterableType) type).getElementType();
+            if (objectValue == null) {
+                node = new ListNode(elementType, null);
+            } else if (objectValue instanceof List) {
+                node = new ListNode(elementType, objectValue);
 
                 List<Object> elements = (List<Object>) objectValue;
                 for (Object childObjectValue : elements) {
                     ExampleNode childNode = parseNode(elementType, childObjectValue);
                     node.getChildNodes().add(childNode);
                 }
+            } else if (objectValue instanceof String) {
+                // there is ArrayEncoding that serializes array to string
+                // for simplicity, treat it as CSV
+                ListNode listNode = new ListNode(elementType, objectValue);
+                if (!((String) objectValue).isEmpty()) {
+                    String value = (String) objectValue;
+                    String[] elements = value.split(",", -1);
+                    for (String childObjectValue : elements) {
+                        ExampleNode childNode = parseNode(elementType, childObjectValue);
+                        listNode.getChildNodes().add(childNode);
+                    }
+                }
+                node = listNode;
             } else {
-                LOGGER.error("Example value is not List type: {}", objectValue);
-                node = new ListNode(elementType, null);
+                throw new IllegalStateException("Example value is not List type: " + objectValue);
             }
         } else if (type instanceof MapType) {
             IType elementType = ((MapType) type).getValueType();
-            if (objectValue instanceof Map) {
+            if (objectValue == null) {
+                node = new MapNode(elementType, null);
+            } else if (objectValue instanceof Map) {
                 MapNode mapNode = new MapNode(elementType, objectValue);
                 node = mapNode;
 
@@ -92,8 +101,7 @@ public class ModelExampleUtil {
 
                     // redact possible credential
                     if (elementType == ClassType.STRING && entry.getValue() instanceof String) {
-                        value = ModelTestCaseUtil.redactStringValue(Collections.singletonList(entry.getKey()),
-                            (String) value);
+                        value = ModelTestCaseUtil.redactStringValue(List.of(entry.getKey()), (String) value);
                     }
 
                     ExampleNode childNode = parseNode(elementType, value);
@@ -101,8 +109,7 @@ public class ModelExampleUtil {
                     mapNode.getKeys().add(entry.getKey());
                 }
             } else {
-                LOGGER.error("Example value is not Map type: {}", objectValue);
-                node = new MapNode(elementType, null);
+                throw new IllegalStateException("Example value is not Map type: " + objectValue);
             }
         } else if (type == ClassType.OBJECT) {
             node = new ObjectNode(type, objectValue);
@@ -114,7 +121,7 @@ public class ModelExampleUtil {
                 if (model.isPolymorphic()) {
                     // polymorphic, need to get the correct subclass from discriminator
                     String serializedName = model.getPolymorphicDiscriminatorName();
-                    List<String> jsonPropertyNames = Collections.singletonList(serializedName);
+                    List<String> jsonPropertyNames = List.of(serializedName);
                     if (model.getNeedsFlatten()) {
                         jsonPropertyNames = ClientModelUtil.splitFlattenedSerializedName(serializedName);
                     }
@@ -208,34 +215,11 @@ public class ModelExampleUtil {
         node = literalNode;
 
         if (exampleValue != null) {
-            String literalValue = convertLiteralToClientValue(wireType, exampleValue.toString());
+            String literalValue
+                = WireTypeClientTypeConverter.convertLiteralToClientValue(wireType, exampleValue.toString());
             literalNode.setLiteralsValue(literalValue);
         }
         return node;
-    }
-
-    /**
-     * Convert literal value in wire type, to literal value in client type
-     * <p>
-     * date-time in RFC1123 to RFC3339
-     * date-time in Unix epoch to RFC3339
-     * bytes in base64URL to bytes in string
-     *
-     * @param wireType the wire type
-     * @param literalInWireType the literal value in wire type
-     * @return the literal value in client type
-     */
-    public static String convertLiteralToClientValue(IType wireType, String literalInWireType) {
-        // see ClassType.convertToClientType and PrimitiveType.convertToClientType
-        String literalValue = literalInWireType;
-        if (wireType == ClassType.DATE_TIME_RFC_1123) {
-            literalValue = new DateTimeRfc1123(literalValue).getDateTime().toString();
-        } else if (wireType == ClassType.BASE_64_URL) {
-            literalValue = new Base64Url(literalValue).toString();
-        } else if (wireType == PrimitiveType.UNIX_TIME_LONG) {
-            literalValue = OffsetDateTime.from(Instant.ofEpochSecond(Long.parseLong(literalValue))).toString();
-        }
-        return literalValue;
     }
 
     @SuppressWarnings("unchecked")
@@ -363,11 +347,11 @@ public class ModelExampleUtil {
         IType type = methodParameter.getClientMethodParameter().getClientType();
         IType wireType = methodParameter.getClientMethodParameter().getWireType();
         if (methodParameter.getProxyMethodParameter().getCollectionFormat() != null
-            && type instanceof ListType
+            && type instanceof IterableType
             && objectValue instanceof String) {
             // handle parameter style
 
-            IType elementType = ((ListType) type).getElementType();
+            IType elementType = ((IterableType) type).getElementType();
             ListNode listNode = new ListNode(elementType, objectValue);
             String value = (String) objectValue;
 
